[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "Reddit-Model"

dynamic = ["version"]

dependencies = [
    "boto3==1.26.117",
    "matplotlib==3.3.4",
    "numpy==1.21.6",  # required by pyspark
    "pandas==1.3",  # 1.3 at least needed for M1 Mac, lower version required by pyspark
    "pg8000==1.29.4",  # this was easier to pip install than psycopg2
    "pyarrow==15.0.2",  # don't use low versions which pin lower versions of numpy that break on M1 Mac
    "pyspark==3.4.0",  # using this version because py37 deprecated in pyspark 3.4.0
    "requests==2.31.0",
    "scikit-learn==1.0.2",
    "seaborn==0.11.2",
    "shap==0.41.0",
    "sqlalchemy==1.4.46",  # originally tried 2.0.10, but this was incompatible with old versions of pandas https://stackoverflow.com/a/75282604/5034651,
    "viral_reddit_posts_utils @ git+https://github.com/ViralRedditPosts/Utils.git@main",
]

requires-python = "== 3.8.15"

authors = [
  {name = "Kenneth Myers", email = "myers.kenneth.james@gmail.com"},
]

description = "This project contains the model for scoring rising reddit posts on potential for going viral. It is intended to be built as a docker image and deployed on Amazon Fargate."

readme = "README.md"

[project.optional-dependencies]
test = [
    "moto[dynamodb,s3]==4.1.8",
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
    "Reddit-Model"
]
build = [
    "flake8",
    "black",
    "Reddit-Model[test]"
]
dev = [
    "pre-commit==2.21.0",
    "Reddit-Model[build]"
]

[tool.setuptools.packages.find]
where = ['model']
exclude = ['tests*']




