[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "Reddit-Model"

dynamic = ["version"]

dependencies = [
    "boto3==1.26.117",
    "numpy==1.26",
    "pandas==2.2.2",  # 1.3 at least needed for M1 Mac
    "pg8000==1.29.4",  # this was easier to pip install than psycopg2
    "pyarrow==15.0.2",  # don't use low versions which pin lower versions of numpy that break on M1 Mac
    "pyspark==3.4.0",
    "requests==2.31.0",
    "scikit-learn==1.4.2",
    "sqlalchemy==1.4.46",  # originally tried 2.0.10, but this was incompatible with old versions of pandas https://stackoverflow.com/a/75282604/5034651,
    "viral_reddit_posts_utils @ git+https://github.com/ViralRedditPosts/Utils.git@main",
    "Reddit-Scraping @ git+https://github.com/ViralRedditPosts/Reddit-Scraping.git@main",
]

requires-python = "== 3.12.3"

authors = [
  {name = "Kenneth Myers", email = "myers.kenneth.james@gmail.com"},
]

description = "This project contains the model for scoring rising reddit posts on potential for going viral. It is intended to be built as a docker image and deployed on Amazon Fargate."

readme = "README.md"

[project.optional-dependencies]
test = [
    "moto[dynamodb,s3]==4.1.8",
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
    "Reddit-Model"
]
build = [
    "flake8",
    "black",
    "Reddit-Model[test]"
]
dev = [
    "matplotlib==3.8",  # packages for plotting and notebook work are only needed in dev
    "notebook==7.1.3",
    "pre-commit==2.21.0",
    "Reddit-Model[build]"
    "seaborn==0.11.2",
    "shap==0.45.0",
]

[tool.setuptools.packages.find]
where = ['model']
exclude = ['tests*']




